fixed double scrollbar

--- a/src/css/pages/_mtm.scss
+++ b/src/css/pages/_mtm.scss
@@ -243,8 +243,9 @@ main {
     }
 }
 
-
-
+.tl-edges {
+    overflow: hidden;
+}
 
 /* @media(min-width: 740px) {
 
