--- a/src/css/sections/_works.scss
+++ b/src/css/sections/_works.scss
@@ -122,6 +122,10 @@
 
                 h5 {
                     font-size: 23px;
+
+                    &:hover {
+                        color: rgb(100, 255, 218);
+                    }
                 }
 
                 /* --- Project Description --- */
@@ -257,7 +261,9 @@
                 h5 {                    
                     font-size: 23px;
 
-                  
+                    &:hover {
+                        color: rgb(100, 255, 218);
+                    }
                 }
 
                 /* --- Project Description --- */
@@ -391,6 +397,10 @@
 
                 h5 {
                     font-size: 23px;
+
+                    &:hover {
+                        color: rgb(100, 255, 218);
+                    }
                 }
 
                 /* --- Project Description --- */
